<resources>
    <string name="app_name">ToDoApplication</string>
    <string name="action_settings">Settings</string>
    <string name="add_todo">Add ToDo</string>
    <string name="task_list">Task List</string>
    <string name="task_title">Task Title</string>
    <string name="add_a_task">Add a task</string>
    <string name="time">Time</string>
    <string name="back_image">Back Image</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="back_icon">back icon</string>
    <string name="more_icon">more icon</string>
    <string name="add_notes">Add Notes</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="warning_msg">Do you want to delete \"%s\", this action can’t be undone.</string>
</resources>